--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
 	<title>exDroner</title>
 	<link rel="stylesheet" href="css/main.css">
 </head>
-<body>
+<body class="home">
 
  	//= template/header.html
 
